src/test/ui/for/for-c-in-str.stderr
error[E0277]: `&str` is not an iterator
  --> $DIR/for-c-in-str.rs:4:14
   |
LL |     for c in "asdf" {
   |              ^^^^^^ `&str` is not an iterator; try calling `.chars()` or `.bytes()`
   |
   = help: the trait `std::iter::Iterator` is not implemented for `&str`
   = note: required by `std::iter::IntoIterator::into_iter`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
